# spike

./: .gitignore  README.md  hello.py  make.sh
.github/workflows/: Catkin.yml  Lint.yml  Validate.yml  catkin.yml
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/unitree_legged_msgs/: HighState.h
devel/lib/pkgconfig/: ros_to_a1.pc  ros_to_unitree_a1.pc  unitree_legged_msgs.pc
devel/lib/ros_to_a1/: lcm_server_3_2
devel/share/ros_to_a1/cmake/: ros_to_a1Config.cmake
devel/share/ros_to_unitree_a1/cmake/: ros_to_unitree_a1Config.cmake
devel/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-extras.cmake  unitree_legged_msgs-msg-paths.cmake  unitree_legged_msgsConfig.cmake
docs/: teamübergreifende architektur.drawio
enamour_ros_to_real/unitree_legged_real/src/exe/: bridge.cpp
include/unitree_legged_sdk/examples/: lcm_server_high.cpp  lcm_server_low.cpp
scripts/: format_code.sh  run_test.sh  setup_environment.sh  setup_git.sh  start_distributed_ros_core.sh  start_ros_core_on_intel_board.sh
src/champ_framework/robot_state_plugin/: CMakeLists.txt  package.xml  robot_state_rviz_plugin_description.xml
src/champ_framework/robot_state_plugin/robot_state_rviz_plugin/include/moveit/robot_state_rviz_plugin/: robot_state_display.h
src/champ_framework/robot_state_plugin/robot_state_rviz_plugin/src/: robot_state_display.cpp
src/champ_framework/robot_state_plugin/rviz_plugin_render_tools/: CMakeLists.txt
src/champ_framework/robot_state_plugin/rviz_plugin_render_tools/include/moveit/rviz_plugin_render_tools/: robot_state_visualization.h
src/champ_framework/robot_state_plugin/rviz_plugin_render_tools/src/: robot_state_visualization.cpp
src/dummy_node/: .cproject  .project  CMakeLists.txt  dummy_cpp.cpp  dummy_main.py  package.xml
src/dummy_node/launch/: dummy.launch
src/enamour/a1_config/: config.json
src/enamour/action_organizer/: CMakeLists.txt  package.xml
src/enamour/api/: CMakeLists.txt  README.md  api.py  package.xml  requirements.txt
src/enamour/api/launch/: setup_api.launch
src/enamour/api/src/: __main__.py  api_error.py
src/enamour/core/: CMakeLists.txt  README.md  openapi.yaml  package.xml
src/enamour/core/docs/: action_composition.drawio  general_overview.drawio  ~$action_composition.drawio.bkp  ~$general_overview.drawio.bkp  ~$general_overview.svg.bkp
src/enamour/core/launch/: bringup.launch
src/enamour/core/src/: __main__.py  app.py  conftest.py
src/enamour/core/src/api/: action_api_client.py  action_factory.py
src/enamour/core/src/api/model/: api_action.py  api_action_request.py
src/enamour/core/src/controller/: controller.py  controller_organizer.py  controller_provider.py  no_op_controller.py  pose_controller.py
src/enamour/core/src/controller/atomic/: no_op_controller.py  pose_controller.py
src/enamour/core/src/core/: action_organizer.py  action_queue.py  completion_checker.py  event_bus.py
src/enamour/core/src/core/controller/: controller.py  controller_organizer.py
src/enamour/core/src/core/controller/atomic/: display_controller.py  head_controller.py  lambda_conrtoller.py  navigation_controller.py  no_op_controller.py  pose_controller.py  sound_controller.py  stabilization_controller.py
src/enamour/core/src/core/model/: state.py
src/enamour/core/src/core/model/action/: action.py  action_type.py  execution_method.py  selection_type.py  timing_option.py
src/enamour/core/src/core/model/action/atomic/: atomic_action.py  display_action.py  head_action.py  lambda_action.py  navigation_action.py  no_op_action.py  pose_action.py  set_position_action.py  sound_action.py  stabilization_action.py  walk_action.py
src/enamour/core/src/core/model/action/atomic/generic/: action_execution_list.py  atomic_action.py
src/enamour/core/src/core/model/action/group/: action_group.py  default_action_group.py  sit_action.py
src/enamour/core/src/core/model/action/high_level/: default_action_group.py  sit_action.py
src/enamour/core/src/core/model/action/high_level/generic/: action_group.py  high_level_action.py
src/enamour/core/src/core/model/common/: action_duration.py  time_stamp.py  vector3.py
src/enamour/core/src/core/validation/: action_group_validator.py  action_validator.py  execution_list_validator.py
src/enamour/core/src/error/: application_error.py  deserialization_error.py  illegal_argument_error.py  illegal_state_error.py  not_supported_error.py  validation_error.py
src/enamour/core/src/error/handler/: action_api_error_handler.py  action_organizer_error_handler.py  error_handler.py
src/enamour/core/src/exception/: application_error.py  illegal_state_error.py  not_supported_error.py
src/enamour/core/src/util/: config.py  degree_converter.py  json_mapper.py  logger.py  ros_node.py  shutdown_hook.py  synchronized.py
src/enamour/core/tests/: app_test.py
src/enamour/core/tests/test_core/test_validation/: test_action_group_validator.py
src/enamour/core/tests/test_util/: test_json_mapper.py  test_synchronized.py
src/enamour/frontend/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  readme.md  requirements.txt
src/enamour/frontend/launch/: bringup.launch
src/enamour/frontend/src/: start_server.bash
src/enamour/frontend/src/launch/: setup_frontend.launch
src/enamour/frontend/src/node/: expression_publisher.py
src/enamour/frontend/src/server/: app.py  face-expression.json  media_queue.py  server.py  start_server.bash  wsgi_server.py
src/enamour/frontend/src/server/static/css/: style.css
src/enamour/frontend/src/server/static/js/: script.js
src/enamour/frontend/src/server/templates/: index.html
src/enamour/head-controller/: Makefile
src/enamour/head-server/: Makefile  head-client.py  head-server.service
src/enamour/pose_test/: CMakeLists.txt  package.xml
src/enamour/ros_to_a1/: CMakeLists.txt  README.md  RosToReal.drawio
src/enamour_ros_to_a1/bridge/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/ros_to_unitree_a1/: CMakeLists.txt  package.xml
src/ros_to_unitree_a1/src/: ros_to_unitree_a1_node.cpp
(+82 files in other folders)
