<?xml version="1.0"?>
<package>
    <name>dummy</name>
    <version>0.0.1</version>
    <description>Description.</description>

    <maintainer email="sit7432@thi.de">sit7432</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>rospy</run_depend>
</package>
