<package format="2">
    <name>enamour_core</name>
    <version>0.0.1</version>
    <description>
        Organizes the receiving and execution of robot actions.
    </description>
    <author>ENAMOUR Informatics</author>
    <maintainer email="enamour@thi.de">Enamour</maintainer> <!-- Required. Put some dummy value here. -->
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>rospy</depend>

    <build_depend>tf2</build_depend>
    <build_depend>tf2_ros</build_depend>

    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>

</package>
