<package format="2">
  <name>enamour_frontend</name>
  <version>1.0.0</version>
  <description>
     frontend
  </description>
  <author>ENAMOUR Informatics</author>
  <maintainer email="enamour@thi.de">Enamour</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
